# c_tehtavat_koulu

./: CMakeLists.txt
projekti/: main  main.c
teht-19/: main  main.c  test.txt
teht-20/: debug.c  debug.h  main  main.c
teht-21/: main  main.c  test.txt
teht_1/: CMakeLists.txt  main.c
teht_10/: CMakeLists.txt  main.c
teht_11/: CMakeLists.txt  main.c
teht_12/: CMakeLists.txt  main.c
teht_13/: main  main.c  test.txt
teht_14/: main  main.c  test.txt
teht_15/: test.txt
teht_16/: main  main.c
teht_17/: main  main.c
teht_18/: main  main.c
teht_2/: CMakeLists.txt  main.c
teht_3/: CMakeLists.txt  main.c
teht_4/: CMakeLists.txt  main.c
teht_5/: CMakeLists.txt  main.c
teht_6/: CMakeLists.txt  main.c
teht_7/: CMakeLists.txt  main.c
teht_8/: CMakeLists.txt  main.c
teht_9/: CMakeLists.txt  main.c
