cmake_minimum_required(VERSION 3.30)
project(tehtavat C)

set(CMAKE_C_STANDARD 23)

add_subdirectory(teht_1)
add_subdirectory(teht_2)
add_subdirectory(teht_3)
add_subdirectory(teht_4)
add_subdirectory(teht_5)
add_subdirectory(teht_6)
add_subdirectory(teht_7)
add_subdirectory(teht_8)
add_subdirectory(teht_9)
add_subdirectory(teht_10)
add_subdirectory(teht_11)
add_subdirectory(teht_12)